--- a/sb_express_inc_website_v3.html
+++ b/sb_express_inc_website_v3.html
@@ -1,55 +1,58 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>SB Express Inc | Trucking Company</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f6f9;
-            color: #333;
-        }
-        header {
-            background-color: #0b3d91;
-            color: white;
-            padding: 40px 20px;
-            text-align: center;
-        }
-        section {
-            padding: 40px 20px;
-            max-width: 1000px;
-            margin: auto;
-        }
-        h2 {
-            color: #0b3d91;
-        }
-        .services {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-        .card {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-        footer {
-            background-color: #0b3d91;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        .contact {
-            background-color: #e9eef7;
-            padding: 30px;
-            border-radius: 8px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SB Express Inc</title>
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f4f6f9;
+    color: #333;
+}
+
+header {
+    background-color: #1f4fa3;
+    color: white;
+    text-align: center;
+    padding: 40px 20px;
+}
+
+section {
+    padding: 40px 20px;
+    max-width: 1100px;
+    margin: auto;
+}
+
+h2 {
+    color: #1f4fa3;
+}
+
+.services {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.card {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+}
+
+footer {
+    background-color: #1f4fa3;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin-top: 40px;
+}
+</style>
 </head>
+
 <body>
 
 <header>
@@ -60,12 +63,12 @@
 <section>
     <h2>About Us</h2>
     <p>
-        SB Express Inc is a professional trucking company providing safe, reliable,
-        and on-time freight transportation services across the United States.
+        SB Express Inc is a professional trucking company providing safe,
+        reliable, and on-time freight transportation services across the United States.
         We focus on efficiency, safety, and strong communication with brokers and shippers.
     </p>
-    <p><strong>MC Number:</strong> (Add Your MC Number)</p>
-    <p><strong>DOT Number:</strong> (Add Your DOT Number)</p>
+    <p><strong>MC Number:</strong> 567867</p>
+    <p><strong>USDOT Number:</strong> 1518276</p>
 </section>
 
 <section>
@@ -90,7 +93,7 @@
     </div>
 </section>
 
-<section class="contact">
+<section>
     <h2>Contact Us</h2>
     <p><strong>Company:</strong> SB Express Inc</p>
     <p><strong>Phone:</strong> 503-347-9233</p>
@@ -98,8 +101,45 @@
     <p><strong>Service Area:</strong> Continental United States</p>
 </section>
 
+<section>
+    <h2>10DLC Opt-In Statement</h2>
+    <p>
+        Our website is not used to collect consumer opt-in for this 10DLC campaign.
+        Consumers provide consent verbally or through other offline means.
+    </p>
+</section>
+
+<section>
+    <h2>Privacy Policy</h2>
+    <p><strong>Effective Date:</strong> February 14, 2026</p>
+
+    <p>
+        SB Express Inc respects your privacy. This website does not collect
+        personal information through online forms.
+    </p>
+
+    <p>
+        Any information voluntarily provided by phone or email is used solely
+        for business communication purposes.
+    </p>
+
+    <p>
+        We do not sell, rent, or share personal information with third parties.
+    </p>
+
+    <p>
+        If you have any questions regarding this Privacy Policy, please contact:
+    </p>
+
+    <p>
+        Email: sbexpressinc@yahoo.com<br>
+        Phone: 503-347-9233<br>
+        Address: 3420 Atrium Boulevard Ste 160, Middletown, OH 45005
+    </p>
+</section>
+
 <footer>
-    <p>© 2026 SB Express Inc. All Rights Reserved.</p>
+    © 2026 SB Express Inc. All Rights Reserved.
 </footer>
 
 </body>
